--- a/public/chat.html
+++ b/public/chat.html
@@ -16,15 +16,18 @@
             <div id="messages" class="chat__messages"></div>
 
             <div class="compose">
-                <form id="message-form">
-                    <input name="message" placeholder="Message" required autocomplete="off">
-                    <button>Send</button>
-                </form>
+                <!-- <form id="message-form"> -->
+                 <input id="message" placeholder="Message" required autocomplete="off">
+                    <button id="send">Send</div>
+                <!-- </form> -->
                 <button id="send-location">Send location</button>
             </div>
         </div>
     </div>
+<div class="videos__group">
+    <div id="video-grid">
 
+    </div>
     <script id="message-template" type="text/html">
             <div class="message">
                 <p>
@@ -58,6 +61,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+    <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
